Fix cover text responsiveness on mobile

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -135,17 +135,6 @@ address a:hover {
     color: white;
 }
 
-.buy-button {
-    background: #b30606;
-    color: white;
-    min-width: 260px;
-}
-
-.buy-button:hover {
-    background: black;
-    color: white;
-}
-
 .border-black {
     border: 1px solid black !important;
 }
@@ -325,13 +314,18 @@ input[name='q']::placeholder {
     color: #17a2b8;
 }
 
+.carousel-item {
+    position: relative;
+}
+
 .cover-text {
+    top: -200px;
     font-size: 130%;
     width: 300px;
     height: 200px;
-    padding-top: 30px;
-    padding-left: 10px;
-    background-color: rgba(0,0,0,0.25);
+    padding-top: 60px;
+    background-color: rgba(0,0,0,0.4);
+    position: absolute;
 }
 
 /* ---------------------------------------------------------------Media Queries */
@@ -372,11 +366,6 @@ input[name='q']::placeholder {
         margin-top: 14px;
     }
 
-    .buy-button {
-        font-size: small;
-        min-width: 170px;
-    }
-
     .card-text {
         font-size: medium;
     }
@@ -389,9 +378,32 @@ input[name='q']::placeholder {
         font-size: 15px;
     }
 
-@media only screen and (max-width: 1024px) and (min-width: 1020px) {
+    .cover-text {
+        top: -100px;
+        font-size: 120%;
+        width: 240px;
+        height: 130px;
+        padding-top: 30px;
+        position: absolute;
+    }
+
+    .cover-text h4 {
+        font-size: 100%;
+    }
+
+    .cover-text a {
+        width: 220px;
+        height: 40px;
+        font-size: 90%;
+    }
+}
+
+@media only screen and (max-width: 1024px) and (min-width: 768px) {
     .card {
         font-size: 15px;
+        min-width: fit-content;
+        min-height: 400px;
+        align-items: center;
     }
 
     .card-body p {
